client/src/assets/scss/stylesheets/projectMetrics.scss
@import "./colors.scss";

.woods-metrics-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 1rem auto;
}

.show-metrics-container {
  text-align: center;
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 1rem;
  padding: 2rem;
  border: 2px solid $light-gray;
  border-radius: 0.2rem;
  min-width: 300px;
  color: $light-gray;
  font-weight: bold;
}

.metrics-container-child {
  display: flex;
  flex-flow: row;
  gap: 1rem
}

.metrics-label {
  color: $medium-beige
}

.added-wood-tile-container {
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: center;
  margin: 1rem auto;
}

.added-wood-tile {
  display: flex;
  flex-flow: row;
  align-items: center;
  justify-content: space-between;
  color: $light-gray;
  min-width: 350px;
  height: auto;
  font-weight: bold;
  
}

#delete-persisted-wood-button,
#delete-image-button {
  color: $medium-beige;
  border-radius: 50%;
  padding: 0.18rem;
  margin-left: 1.5rem;
}

#delete-persisted-wood-button:link,
#delete-image-button:link {
  color: $medium-beige;
}
#delete-persisted-wood-button:visited,
#delete-image-button:visited {
  color: $medium-beige;
}
#delete-persisted-wood-button:hover,
#delete-image-button:hover {
  cursor: pointer;
  background-color: white;
}

.add-woods-container {
  display: flex;
  gap: 1rem;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  margin-bottom: 2rem;
  padding: 2rem;
  min-width:70%;
  background-color: $dark-gray-transparent-9;
  border-radius: 0.2rem;
  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
  color: $medium-beige;
}

.add-wood-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: $medium-beige
}

#hardwood {
  min-width:max-content;
  width: 280px;
  margin-bottom: 1rem;
}

.boardFeet-label-container {
  display: flex;
  align-items: center;
  color: $medium-beige;
  padding: 1rem;
}

#boardFeet-heading {
  margin-right: 1rem;;
}

#boardFeet-input {
  border: 0.2rem solid $medium-beige;
  background-color: $dark-gray;
  color: white;
  border-radius: 0.2rem;
  width: 80px;
  height: 30px;
}

.show-added-wood {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  padding: 2px;
}

.staged-woods {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.add-selected-button {
  background-color: none;
  color: $medium-beige;
  border: 3px solid $medium-beige;
  background-color: $dark-gray;
  border-radius: 0.2rem;
  padding: 0.5rem;
  width: 150px;
  height: 55px;
  margin-bottom: 1rem;
}

.add-selected-button:link {
  color: white;
}
.add-selected-button:visited {
  color: white;
}
.add-selected-button:hover {
  cursor: pointer;
  color: $red-brown;
  background-color: $beige-transparent;
}

.save-button {
  background-color: none;
  color: $medium-beige;
  border: 3px solid $medium-beige;
  background-color: $dark-gray;
  border-radius: 0.2rem;
  margin-top: 1rem;
  padding: 0.5rem;
  width: 150px;
  height: 55px;
}

.save-button:link {
  color: $medium-beige;
}
.save-button:visited {
  color: $medium-beige;
}
.save-button:hover {
  cursor: pointer;
  color: $red-brown;
  background-color: $beige-transparent;
}

#added-wood-list-item {
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.3rem;;
}

.remove-wood-x { 
  color: $medium-beige;
  border-radius: 0.2rem;
  padding: 0.18rem;
  margin-left: 1.5rem;
}

.remove-wood-x:link {
  color: $medium-beige;
}
.remove-wood-x:visited {
  color: $medium-beige;
}
.remove-wood-x:hover {
  cursor: pointer;
  background-color: $medium-beige;
  color: red;
}


.h3-woods-needed {
  color: $dark-gray;
  font-weight: bold;
  margin-bottom: 1rem;
}

